discussion/kv_engine/154756/154756_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: Do blind write for initial disk snapshot

Since all items within this initial disk snapshot will be unique.

Change-Id: I6855ba10dcf5df8b7ab75bd8a503f0c8f773296d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-06-04 07:56:22.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 08:05:35.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31115/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: no member named "first" in "cb::FragmentationStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31115/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9475/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1261:58: error: no member named "NewDocInsert" in "magma::Magma::WriteOperation" [clang-diagnostic-error]
            writeOps.emplace_back(Magma::WriteOperation::NewDocInsert(
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1269:58: error: no member named "NewDocUpsert" in "magma::Magma::WriteOperation"; did you mean "NewDocUpdate"? [clang-diagnostic-error]
            writeOps.emplace_back(Magma::WriteOperation::NewDocUpsert(
                                                         ^~~~~~~~~~~~
                                                         NewDocUpdate
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:1120:27: note: "NewDocUpdate" declared here
    static WriteOperation NewDocUpdate(const Slice& key,
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9475/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1261:58:
error: no member named "NewDocInsert" in "magma::Magma::WriteOperation" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9475/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36422/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\defragmenter.cc(63): error C2039: "first": is not a member of "cb::FragmentationStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36422/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1167/ : FAILURE

Compile error at [2021-06-04T07:59:12.280Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: no member named "first" in "cb::FragmentationStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11193/ : FAILURE

Compile error at [2021-06-04T07:59:58.125Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: ?class cb::FragmentationStats? has no member named ?first?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11048/ : FAILURE

Compile error at [2021-06-04T07:58:53.045Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: ?class cb::FragmentationStats? has no member named ?first?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11459/ : FAILURE

Compile error at [2021-06-04T07:59:03.200Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: no member named "first" in "cb::FragmentationStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11459/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19046/ : FAILURE

Compile error at [2021-06-04T08:00:48.135Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: no member named "first" in "cb::FragmentationStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19046/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10118/ : FAILURE

Compile error at [2021-06-04T08:04:15.053Z] ../kv_engine/engines/ep/src/defragmenter.cc:62:47:
error: no member named "first" in "cb::FragmentationStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10118/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8071/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/26/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
